refactor de tests