@@ -8,7 +8,6 @@ import org.junit.Test;
 
 import java.util.ArrayList;
 import java.util.List;
-
 import static org.junit.jupiter.api.Assertions.*;
 
 public class OdontologoServiceImplTest {
@@ -18,6 +17,7 @@ public class OdontologoServiceImplTest {
     @Test
     public void cuandoSeGuardaSatisfactoriamenteUnOdontologoEnH2(){
         odontologoService = new OdontologoServiceImpl(new OndotologoDaoH2Impl());
+
         Odontologo odontologo = new Odontologo("AE2132132", "Nicolas","Sanchez");
 
         Odontologo odontologoGuardado = odontologoService.guardarOdontologo(odontologo);
@@ -29,11 +29,24 @@ public class OdontologoServiceImplTest {
     }
 
     @Test
+    public void cuandoNoSeGuardaSatisfactoriamenteUnOdontologoEnH2(){
+        odontologoService = new OdontologoServiceImpl(new OndotologoDaoH2Impl());
+
+        Odontologo odontologo = new Odontologo(null, "Nicolas","Sanchez");
+        Odontologo odontologoNoGuardado = odontologoService.guardarOdontologo(odontologo);
+
+        assertNull(odontologoNoGuardado);
+    }
+
+    @Test
     public void cuandoSeBuscanTodosLosOdontologosEnH2(){
         odontologoService = new OdontologoServiceImpl(new OndotologoDaoH2Impl());
+
         List<Odontologo> odontologos = odontologoService.buscarTodosLosOdontologos();
-        assertNotNull(odontologos);
+
         assertEquals(2, odontologos.size());
+        assertEquals(odontologos.getFirst().getNombre(), "Maximiliano");
+        assertEquals(odontologos.getLast().getNombre(), "Nicolas");
     }
 
     @Test
@@ -45,6 +58,7 @@ public class OdontologoServiceImplTest {
         Odontologo odontologoGuardado = odontologoService.guardarOdontologo(odontologo);
 
         assertNotNull(odontologoGuardado);
+
         assertEquals(odontologo.getNumeroDeMatricula(), odontologoGuardado.getNumeroDeMatricula());
         assertEquals(odontologo.getNombre(), odontologoGuardado.getNombre());
         assertEquals(odontologo.getApellido(), odontologoGuardado.getApellido());
@@ -52,13 +66,26 @@ public class OdontologoServiceImplTest {
 
     @Test
     public void cuandoSeBuscanTodosLosOdontologosEnMemoria(){
-        List<Odontologo> odontologoList = List.of(new Odontologo("AE2132132", "Maximiliano","Altez"), new Odontologo("AE2132132", "Nicolas","Sanchez"));
+
+        Odontologo odontologo = new Odontologo("AE2132132", "Maximiliano","Altez");
+        Odontologo odontologo2 = new Odontologo("AE2132132", "Nicolas","Sanchez");
+
+        List<Odontologo> odontologoList = List.of(odontologo, odontologo2);
+
         odontologoService = new OdontologoServiceImpl(new OdontologoDaoMemoriaImpl(odontologoList));
+
         List<Odontologo> odontologos = odontologoService.buscarTodosLosOdontologos();
-        assertNotNull(odontologos);
+
         assertEquals(2, odontologos.size());
-        assertEquals(odontologoList.get(0).getNombre(), "Maximiliano");
-        assertEquals(odontologoList.get(1).getNombre(), "Nicolas");
+        assertEquals(odontologos.getFirst(),odontologo);
+        assertEquals(odontologos.getLast(),odontologo2);
+    }
+
+    @Test
+    public void cuandoSeBuscanTodosLosOdontologsEnMemoriaYNoHayNinguno(){
+        odontologoService = new OdontologoServiceImpl(new OdontologoDaoMemoriaImpl(new ArrayList<>()));
+        List<Odontologo> odontologos = odontologoService.buscarTodosLosOdontologos();
+        assertTrue(odontologos.isEmpty());
     }
 
 }
